# posix-1992-userland

./: .gitignore  LICENSE  Makefile  README.md  compile_commands.json  config.h.in  config.mk  create-hook-symlinks  makefile  meson.build  meson.options
.cache/clangd/index/: ls.c.355709AAC82DF874.idx  ls.h.D6627E7C53240BC6.idx  main.c.6DAF493390E1799D.idx  main.c.A759881E32F6D6F6.idx
.githooks/: pre-commit
buildtools/: generate_locales.py
lib/: meson.build
lib/convert/: convert.c  convert.h  meson.build
lib/err/: err.c  err.h  meson.build
lib/functional/: functional.c  functional.h  meson.build
lib/iterdir/: iterdir.c  iterdir.h  meson.build
lib/vstring/: meson.build  vstring.c  vstring.h
maketools/: posix.gitignore.mk  posix.lib.mk  posix.locale.mk  posix.macros.mk  posix.manpage.mk  posix.prog.mk  posix.sprog.mk
requirements/: ls.md  url.md
sbin/: Makefile  makefile  meson.build
sbin/basename/: basename.c  meson.build
sbin/basename/core/: .gitignore  basename.c  basename.h  main.c  makefile
sbin/basename/main/: .gitignore  makefile
sbin/cat/: cat.h  meson.build
sbin/cat/core/: .gitignore  cat.c  makefile
sbin/cat/main/: .gitignore  main.c  makefile
sbin/chgrp/: chgrp.c  chgrp.h  meson.build
sbin/chgrp/core/: .gitignore  chgrp.c  chgrp.h  makefile
sbin/chgrp/main/: .gitignore  main.c  makefile
sbin/chmod/: chmod.c  chmod.h  main.c  meson.build
sbin/ls/: Makefile  ls  ls.1  ls.c  ls.h  main.c  makefile  makefile.depend  meson.build
sbin/ls/core/: .gitignore  ls.1  ls.c  ls.h  makefile
sbin/ls/core/locale/de/LC_MESSAGES/: ls.po
sbin/ls/core/locale/en/LC_MESSAGES/: ls.po
sbin/ls/core/locale/es/LC_MESSAGES/: ls.po
sbin/ls/core/locale/fr/LC_MESSAGES/: ls.po
sbin/ls/core/locale/it/LC_MESSAGES/: ls.po
sbin/ls/locale/de/LC_MESSAGES/: ls.po
sbin/ls/locale/de/LC_TIME/: ls.po
sbin/ls/locale/en/LC_MESSAGES/: ls.po
sbin/ls/locale/en/LC_TIME/: ls.po
sbin/ls/locale/en_US/LC_MESSAGES/: ls.po
sbin/ls/locale/en_US/LC_TIME/: ls.po
sbin/ls/locale/es/LC_MESSAGES/: ls.po
sbin/ls/locale/es/LC_TIME/: ls.po
sbin/ls/locale/fr/LC_MESSAGES/: ls.po
sbin/ls/locale/fr/LC_TIME/: ls.po
sbin/ls/locale/it/LC_MESSAGES/: ls.po
sbin/ls/locale/it/LC_TIME/: ls.po
sbin/ls/main/: .gitignore  makefile
sbin/ls/po/: LINGUAS  POTFILES  de.po  fr.po  meson.build
sbin/printf/core/: .gitignore  makefile  printf.c  printf.h
sbin/printf/main/: .gitignore  main.c  makefile
tests/: makefile  meson.build
tests/lib/: meson.build
tests/sbin/: makefile  meson.build
tests/sbin/ls/: makefile  meson.build
tests/sbin/ls/add_child/: .gitignore  main.c  makefile
tests/sbin/ls/dir_content/: .gitignore  main.c  makefile
tests/sbin/ls/filter/: .gitignore  main.c  makefile
tests/sbin/ls/function/: .gitignore  main.c  makefile  test-ls-function
tests/sbin/ls/get_group_name/: makefile
tests/sbin/ls/get_user_name/: makefile
tests/sbin/ls/lu_len/: .gitignore  main.c  makefile
tests/sbin/ls/map/: .gitignore  main.c  makefile
tests/sbin/ls/snprintlu/: .gitignore  main.c  makefile
tests/sbin/ls/snprintlu_dup/: .gitignore  main.c  makefile
tests/sbin/ls/strdup/: .gitignore  main.c  makefile
tests/tap_suite/: .gitignore  harness  makefile  meson.build  tap.c  tap.h  testa
